--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>map</title><link href=/static/css/app.ca1845f3f01c2304cffe341e67536419.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js></script><script type=text/javascript src=/static/js/vendor.63321e7bb25677dc4452.js></script><script type=text/javascript src=/static/js/app.72d6c2d0defe110dcf74.js></script></body></html>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset=utf-8>
+    <meta name=viewport content="width=device-width,initial-scale=1">
+    <title>map</title>
+    <link href=./static/css/app.ca1845f3f01c2304cffe341e67536419.css rel=stylesheet>
+</head>
+
+<body>
+    <div id=app></div>
+    <script type=text/javascript src=./static/js/manifest.2ae2e69a05c33dfc65f8.js></script>
+    <script type=text/javascript src=./static/js/vendor.63321e7bb25677dc4452.js></script>
+    <script type=text/javascript src=./static/js/app.72d6c2d0defe110dcf74.js></script>
+</body>
+
+</html>
