修改打包脚本，以便打出来的index.html放到最外面

--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset=utf-8>
-  <meta name=viewport content="width=device-width,initial-scale=1">
-  <title>map</title>
-</head>
-
-<body>
-  <div id=app></div>
-</body>
-
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>map</title><link href=./dist/static/css/app.6ae9854e2cad2ee8ac834298ef3bdb65.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./dist/static/js/manifest.d2aa68210d45a2b263ff.js></script><script type=text/javascript src=./dist/static/js/vendor.63321e7bb25677dc4452.js></script><script type=text/javascript src=./dist/static/js/app.c3fda51a8a930efb84ab.js></script></body></html>
