--- a/template.html
+++ b/template.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset=utf-8>
   <meta name=viewport content="width=device-width,initial-scale=1">
-  <title>map</title>
+  <title>地图小工具</title>
 </head>
 
 <body>
